--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -198,11 +198,18 @@
             padding: 50px 30px;
             background-color: $white;
             color: $black;
+            transition: 0.3s;
+
+            &:hover {
+                transform: translateY(-10px);
+                box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.2);
+            }
 
             a {
                 font-weight: 700;
                 font-size: 17px;
                 line-height: 20px;
+                color: $black;
 
                 i {
                     margin-left: 7px;
